apps/demo-nginx/overlays/prod-eks-1/manifests/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: nginx
          image: 111122223333.dkr.ecr.ap-southeast-2.amazonaws.com/demo-nginx:1.27@sha256:REPLACE_WITH_ACTUAL_DIGEST
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
