apps/demo-nginx/overlays/prod-eks-1/manifests/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx
spec:
  rules:
    - host: demo-nginx.prod.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nginx
                port:
                  name: http
